--- a/frontend/public/assets/i18n/common/ru.json
+++ b/frontend/public/assets/i18n/common/ru.json
@@ -1,73 +1,84 @@
 {
-    "Filter" :"Фильтр",
-    "Savdo turi": "",
-    "Kategoriyalar": "",
-    "Viloyatlar": "",
-    "Buyurtmalar": "",
-    "Takliflar": "",
-    "Kompaniyalar": "",
-    "Profile": "",
-    "Jami": "",
-    "ta": "",
-    "Buyurtma yaratish": "",
-    "Buyurtmachi": "",
-    "Sana": "",
-    "buyurtma holati": "",
-    "Nomi": "",
-    "ko'proq ma'lumot": "",
-    "Telefon raqam": "",
-    "Kategoriyasi": "",
-    "Kategoriyasi turlari": "",
-    "Manzil": "",
-    "yopish": "",
-    "Yakunlash": "",
-    "Mening takliflarim": "",
-    "Menga takliflar": "",
-    "mening buyurtmalarim": "",
-    "barcha buyurtmalar": "",
-    "yangi xabar": "",
-    "Narxi": "",
-    "Tashkilot": "",
-    "Yangi buyurtma": "",
-    "Ishlab chiqarish": "",
-    "Ulgurji savdo": "",
-    "Chakana savdo": "",
-    "Xizmat ko'rsatish": "",
-    "Viloyat": "",
-    "Tuman": "",
-    "Mahsulot yoki xizmat nomi": "",
-    "Mahsulot yoki xizmat turi": "",
-    "Qo'shimcha ma'lumot": "",
-    "Izoh": "",
-    "To'lov turi": "",
-    "min": "",
-    "max": "",
-    "Saqlash": "",
-    "Kategoriya turi": "",
-    "Kategoriya": "",
-    "Foydalanuvchi": "",
-    "Tashkilot nomi": "",
-    "Telefon raqami": "",
-    "Parol": "",
-    "Savdo turingizni tanlang": "",
-    "Email": "",
-    "Ism": "",
-    "Familiya": "",
-    "Joriy parol": "",
-    "Yangi parol": "",
-    "Yangi parolni tasdiqlang": "",
-    "Savdo faoliyati": "",
-    "Yo'nalishi": "",
-    "Mahsulotlar": "",
-    "kirish": "",
-    "Foydalanuvchi sifatida ro'yxatdan o'tish": "",
-    "Ro'yxatdan o'tish": "",
-    "Avval ro'yxatdan o'tgan bo'lsangiz": "",
-    "Kirish qismiga qayting": "",
-    "Tashkilot sifatida ro'yxatdan o'tish": "",
-    "Tizimda yangimisiz? Unda avval": "",
-    "ro'yxatdan o'ting": "",
-    "Shaxsiy ma'lumotlaringiz": "",
-    "Tashkilot ma'lumotlari": "",
-    "Serverda xatolik yuz berdi...": ""
+    "Filter":"Фильтр",
+    "Savdo turi": "Тип торговли",
+    "Kategoriyalar": "Категории",
+    "Davlatlar": "Страны",
+    "Buyurtmalar": "Заказы",
+    "Xabar": "Сообщения",
+    "Kompaniyalar": "Компании",
+    "Profile": "Профиль",
+    "Jami": "Найдено",
+    "ta": "шт",
+    "Buyurtma yaratish": "Создат заказ",
+    "Buyurtmachi": "Заказчик",
+    "Sana": "Дата",
+    "buyurtma holati": "Состояние заказа",
+    "Nomi": "Название",
+    "ko'proq ma'lumot": "Дополнительная информация",
+    "Telefon raqam": "Номер телефона",
+    "Kategoriyasi": "Категория",
+    "Kategoriyasi turlari": "Под категория",
+    "Manzil": "Адрес",
+    "yopish": "Закрыт",
+    "Yakunlash": " Заканчивать",
+    "Kiruvchi xabar": "Входящее сообщение",
+    "Chiquvchi xabar": "Исходящее сообщение",
+    "mening buyurtmalarim": "Мои заказы",
+    "barcha buyurtmalar": "Все заказы",
+    "yangi xabar": " новое сообщение",
+    "Narxi": "Цена",
+    "Tashkilot": "Компания",
+    "Yangi buyurtma": "Новый заказ",
+    "Ishlab chiqarish": "Производства",
+    "Ulgurji savdo": "Оптом",
+    "Chakana savdo": "Розница",
+    "Xizmat ko'rsatish": "Услуга",
+    "Viloyat": "Регион",
+    "Tuman": "Район",
+    "Mahsulot yoki xizmat nomi": "Название товар или услуги",
+    "Mahsulot yoki xizmat turi": "Тип продукта или услуги",
+    "Qo'shimcha ma'lumot": "Дополнительная информация",
+    "Izoh": "Описание",
+    "To'lov turi": "Способ оплаты",
+    "min": "мин:",
+    "max": "Макс:",
+    "Saqlash": "Сохранит",
+    "Kategoriya turi": "Тип категории",
+    "Kategoriya": "Категория",
+    "Foydalanuvchi": "Пользователь",
+    "Tashkilot nomi": "Название компании:",
+    "Telefon raqami": "Номер телефона:",
+    "Parol": "Пароль",
+    "Savdo turingizni tanlang": "Выберите свой тип торговли",
+    "Email": "Email",
+    "Ism": "Имя:",
+    "Familiya": "Фамилия:",
+    "Joriy parol": "Старый пароль:",
+    "Yangi parol": "Новый пароль",
+    "Yangi parolni tasdiqlang": "Подтвердите новый пароль",
+    "Savdo faoliyati": "Тип торговли",
+    "Yo'nalishi": "Вид деятельности",
+    "Mahsulotlar": "Товары",
+    "kirish": "Вход",
+    "Foydalanuvchi sifatida ro'yxatdan o'tish": "Зарегистрироваться как пользователь",
+    "Ro'yxatdan o'tish": "Зарегистрироваться",
+    "Avval ro'yxatdan o'tgan bo'lsangiz": "Если вы регистрировались ранее",
+    "Kirish qismiga qayting": " Вернитесь на страницу входа ",
+    "Tashkilot sifatida ro'yxatdan o'tish": "Зарегистрироваться как компания",
+    "Tizimda yangimisiz? Unda avval": "Вы впервые платформе? Тогда сначала ",
+    "ro'yxatdan o'ting": "Зарегистрируйтесь",
+    "Shaxsiy ma'lumotlaringiz": "Личные данные:",
+    "Tashkilot ma'lumotlari": "Данные компании",
+    "Serverda xatolik yuz berdi...": "Ошибка в сервере",
+    "Nomi bilan qidirish": "Поиск по имени",
+    "Ro'yxatdan o'ting": "Зарегистрироваться",
+    "Davlat": "Страна",
+    "kirish qismiga qayting": "Вернитесь на страницу входа",
+    "Buyurtma berish": "Размещение заказа",
+    "Mahsulot yaratish": "Создать товар",
+    "Buyurtma holati": "Статус заказа",
+    "Jami buyurtmalar": "Всего заказов",
+    "Faollashtirish": "Активировать",
+    "Tasdiqlash": "Подтвердить",
+    "Parolni takrorlang": "Повторите пароль"
 }
