--- a/frontend/public/assets/i18n/common/ru.json
+++ b/frontend/public/assets/i18n/common/ru.json
@@ -14,18 +14,18 @@
     "Sana": "Дата",
     "buyurtma holati": "Состояние заказа",
     "Nomi": "Название",
-    "ko'proq ma'lumot": "Дополнительная информация",
+    "ko'proq ma'lumot": "Подробнее",
     "Telefon raqam": "Номер телефона",
     "Kategoriyasi": "Категория",
     "Kategoriyasi turlari": "Под категория",
     "Manzil": "Адрес",
     "yopish": "Закрыт",
-    "Yakunlash": " Заканчивать",
+    "Yakunlash": "Завершить",
     "Kiruvchi xabar": "Входящее сообщение",
     "Chiquvchi xabar": "Исходящее сообщение",
     "mening buyurtmalarim": "Мои заказы",
     "barcha buyurtmalar": "Все заказы",
-    "yangi xabar": " новое сообщение",
+    "yangi xabar": "новое сообщение",
     "Narxi": "Цена",
     "Tashkilot": "Компания",
     "Yangi buyurtma": "Новый заказ",
@@ -70,7 +70,7 @@
     "Shaxsiy ma'lumotlaringiz": "Личные данные:",
     "Tashkilot ma'lumotlari": "Данные компании",
     "Serverda xatolik yuz berdi...": "Ошибка в сервере",
-    "Nomi bilan qidirish": "Поиск по имени",
+    "Nomi bilan qidirish": "Поиск",
     "Ro'yxatdan o'ting": "Зарегистрироваться",
     "Davlat": "Страна",
     "kirish qismiga qayting": "Вернитесь на страницу входа",
@@ -80,5 +80,18 @@
     "Jami buyurtmalar": "Всего заказов",
     "Faollashtirish": "Активировать",
     "Tasdiqlash": "Подтвердить",
-    "Parolni takrorlang": "Повторите пароль"
+    "Parolni takrorlang": "Повторите пароль",
+    "Tashkilot yaratish": "Добавит компанию",
+    "Tashkilotlar" : "Компании",
+    "Buyurtmani o'chirish": "Удалить заказ",
+    "Siz rostdan ham buyurtmani o'chirmoqchimisiz?": "Вы действительно хотите удалить заказ?",
+    "Bekor qilish": "Отмена",
+    "O'chirish": "Удалить",
+    "Xabarni kiriting": "Введите сообщение",
+    "Mahsulot yoki buyurtma tanlanmagan": "Товар или заказ не выбран",
+    "Chiqish": "Выход",
+    "active": "Активный",
+    "unactive": "Сделка завершена"
+
+
 }
