--- a/frontend/public/assets/i18n/common/ru.json
+++ b/frontend/public/assets/i18n/common/ru.json
@@ -69,7 +69,7 @@
     "ro'yxatdan o'ting": "Зарегистрируйтесь",
     "Shaxsiy ma'lumotlaringiz": "Личные данные:",
     "Tashkilot ma'lumotlari": "Данные компании",
-    "Serverda xatolik yuz berdi...": "Ошибка в сервере",
+    "Serverda xatolik yuz berdi...": "Ошибка в сервере...",
     "Nomi bilan qidirish": "Поиск",
     "Ro'yxatdan o'ting": "Зарегистрироваться",
     "Davlat": "Страна",
@@ -93,7 +93,41 @@
     "active": "Активный",
     "unactive": "Сделка завершена",
     "Aloqa ma'lumotlari": "Контактные данные",
-    "Tashkilot haqida": "О компании"
+    "Tashkilot haqida": "О компании",
+    "Internet mavjud emas": "Интернет недоступен",
+    "Avtorizatsiyadan o'tilmagan": "Вы не авторизованы",
+    "Diqqat!": "Внимание!",
+    "Diqqat! Viloyat topilmadi": "Внимание! Область не найдена",
+    "Diqqat! Tuman topilmadi": "Внимание! Район не найден",
+    "Tashkilot topilmadi": "Компания не найдена",
+    "Parol muvaffaqiyatli o'zgartirildi": "Пароль успешно изменен",
+    "Joriy parol topilmadi": "Текущий пароль не найден",
+    "Diqqat! Ushbu viloyat avval yaratilgan": "Внимание! Эта область уже создана",
+    "Diqqat! Ushbu tuman avval yaratilgan": "Внимание! Этот район уже создан",
+    "Foydalanuvchi topilmadi": "Пользователь не найден",
+    "Parol noto'g'ri": "Неверный пароль",
+    "Kategoriya topilmadi": "Категория не найдена",
+    "Taklif topilmadi": "Предложение не найдено",
+    "Foydalanuvchi ma'lumotlari muvaffaqiyatli yangilandi": "Личные данные пользователя успешно обновлены",
+    "Ismingizni kiriting": "Введите ваше имя",
+    "Familiyangizni kiriting": "Введите вашу фамилию",
+    "Telefon raqam to'liq kiriting": "Введите номер телефона полностью",
+    "Viloyat tanlanmagan": "Страна не выбрана",
+    "Tuman tanlanmagan": "Область не выбран",
+    "Parol 6 ta belgidan kam bo'lishi mumkin emas": "Пароль не может быть меньше 6 символов",
+    "Parollar mos emas": "Пароли не совпадают",
+    "Tashkilot nomini kiriting": "Введите название компании",
+    "Telefon raqamni to'liq kiriting": "Введите номер телефона полностью",
+    "Emailni kiriting": "Введите адрес электронной почты",
+    "Kategoriya tanlanmagan": "Категория не выбрана",
+    "Kategoriya turlari tanlanmagan": "Типы категорий не выбраны",
+    "Buyurtma muvaffaqiyatli o'chirildi": "Заказ успешно удален",
+    "Savdo turi tanlanmagan": "Тип продажи не выбран",
+    "Diqqat! Xabar kiritilmagan": "Внимание! Сообщение не введено",
+    "Foydalanuvchi avval ro'yxatga olingan": "Пользователь уже зарегистрирован",
+    "Joriy parol noto'g'ri": "Текущий пароль неверный",
+    "Katoriya topilmadi": "Категория не найдена",
+    "Buyurtma topilmadi": "Заказ не найден"
 
 
 }
